Adjusted links to css files

--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@
 
 body {
     background: #0f0f0f;
-    background-image: url(/photos/starry-night.jpg);
+    background-image: url(/photos/starry-night-2.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
