--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,14 @@
 
 
 body {
+    /* width: 100vw; */
+    height: 100vh;
     background: #0f0f0f;
     background-image: url(/photos/starry-night-2.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
-    justify-content: center;
+    /* justify-content: center; */
     font-family: 'Share Tech Mono', monospace;
 }
 
@@ -58,10 +60,71 @@ body {
     padding: 0px 1.5em;
 }
 
-.moonPhases {
+.bodyydob {
+    width: 100vw;
+    height: 100vh;
+    /* scroll-snap-type: y mandatory;
+    overflow-y: scroll;
+    overflow-x: hidden; */
+}
+
+.page {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    scroll-snap-align: start;
+}
+
+.page2 {
+    font-size: 400px;
+    color: white;
+}
+
+.moonStats {
+    width: max(10vw, 100px);
+    aspect-ratio: 1;
+    background-color: black;
+    border-radius: 50%;
+    position: absolute;
+    justify-self: center;
     align-self: center;
+    font-size: 1.5em;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    animation: moonStatus 3s;
+    /* animation-delay: 2.4s; */
+}
+
+.moonStatus {
+    width: 80%;
+    max-height: 80%;
+    vertical-align: middle;
+}
+
+@keyframes moonStatus {
+    0% {opacity: 0;}
+    80% {opacity: 0;}
+    100% {opacity: 100;}
+}
+
+.moonPhases {
     border: 15px solid black;
     border-radius: 50%;
+    animation: moonphases 2.5s;
+}
+
+@keyframes moonphases {
+    0% {transform:rotate(0deg);
+    width: 0px;
+    border: none;}
+    80% {transform:rotate(325deg);
+    border: none;}
+    100% {transform:rotate(0deg);}
 }
 
 .moonHolder {
