--- a/css/main.css
+++ b/css/main.css
@@ -32,7 +32,7 @@ body {
     /* width: 100vw; */
     height: 100vh;
     background: #0f0f0f;
-    background-image: url('/starry-night-2.jpg');
+    background-image: url('https://ncooper00.github.io/Moon-Phase-Website/starry-night-2.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
