--- a/css/main.css
+++ b/css/main.css
@@ -188,6 +188,7 @@ body {
 
 .moonSVG:hover .moonPhases {
     padding: 75px;
+    box-shadow: 0px 0px 20px 10px white;
 }
 
 .moonSVG:hover .outerMoon {
@@ -201,7 +202,7 @@ body {
     border-radius: 50%;
     box-shadow: 0px 0px 50px 10px ;
     animation: moonphases 2.5s;
-    transition: padding 500ms ease-in-out;
+    transition: padding 500ms ease-in-out, box-shadow 500ms ease-in-out;
     /* z-index: 3; */
 }
 
