--- a/css/main.css
+++ b/css/main.css
@@ -28,14 +28,24 @@
     cursor: pointer;
 }
 
+html, body {
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
+
 body {
     /* width: 100vw; */
-    height: 100vh;
+    /* height: 100vh; */
     background: #0f0f0f;
     background-image: url('https://ncooper00.github.io/Moon-Phase-Website/starry-night-2.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
+    /* overflow: hidden; */
+    /* overscroll-behavior: hide; */
     /* justify-content: center; */
     font-family: 'Share Tech Mono', monospace;
 }
@@ -59,11 +69,12 @@ body {
 
 .moonPhaseHolder {
     position: absolute;
-    left:  15em;
+    left:  5%;
     width: fit-content;
+    top: 25%;
     height: fit-content;
-    align-self: flex-end;
-    justify-self: left;
+    /* align-self: flex-end; */
+    /* justify-self: left; */
 }
 
 .moonPhase {
@@ -73,20 +84,31 @@ body {
 
 .navLinks {
     position: absolute;
-    right: 15em;
-    width: fit-content;
+    /* right: 15em; */
+    width: 100%;
     height: fit-content;
+    top: 50%;
     grid-row: 1;
     margin-bottom: 5px;
-    align-self: flex-end;
-    justify-self: right;
+    /* align-self: flex-end; */
+    /* justify-self: right; */
 }
 
 .headerA {
     color: white;
     font-size: 2em;
     text-decoration: none;
-    padding: 0px 1.5em;
+    /* padding: 0px 1.5em; */
+    position: absolute;
+    
+}
+
+.home {
+    right: 15%;
+}
+
+.options {
+    right: 5%;
 }
 
 .bodyydob {
@@ -139,8 +161,8 @@ body {
     background-color: black;
     border-radius: 50%;
     position: absolute;
-    justify-self: center;
-    align-self: center;
+    /* justify-self: center; */
+    /* align-self: center; */
     font-size: 1.25em;
     color: white;
     display: flex;
@@ -157,7 +179,7 @@ body {
 .moonStatus {
     width: min-content;
     max-height: min-content;
-    vertical-align: middle;
+    /* vertical-align: middle; */
 }
 
 @keyframes moonStatus {
@@ -167,7 +189,8 @@ body {
 }
 
 .moonSVG {
-    width: fit-content;
+    position: relative;
+    width: min-content;
     aspect-ratio: 1;
     z-index: 9;
     display: flex;
@@ -179,7 +202,7 @@ body {
 }
 
 .moonSVG:hover {
-    box-shadow: inset 0px 0px 0px 90px black;
+    box-shadow: inset 0px 0px 90px 90px #000000;
 }
 
 .moonSVG:hover .moonStats {
@@ -196,13 +219,16 @@ body {
 }
 
 .moonPhases {
-    max-width: 500px;
+    width: min(600px, 90vw);
     aspect-ratio: 1;
     border: 15px solid black;
     border-radius: 50%;
+    justify-self: center;
+    align-self: center;
     box-shadow: 0px 0px 50px 10px ;
     animation: moonphases 2.5s;
     transition: padding 500ms ease-in-out, box-shadow 500ms ease-in-out;
+    
     /* z-index: 3; */
 }
 
