--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,7 @@
+* {
+    scroll-behavior: smooth;
+}
+
 ::-webkit-scrollbar {
     width: 1em;
     height: 1rem;
@@ -7,7 +11,7 @@
     background: rgba(49, 89, 112, 0.21);
     backdrop-filter: blur(1rem);
     /* border: 2px solid var(--softwhite); */
-    /* margin-top: 125px; */
+    margin-top: auto;
     margin-right: 50px;
     /* border-radius: 100vh; */
 }
@@ -28,7 +32,7 @@
     cursor: pointer;
 }
 
-html, body {
+body {
     width: 100%;
     height: 100%;
     margin: 0px;
@@ -42,7 +46,7 @@ body {
     background: #0f0f0f;
     background-image: url('https://ncooper00.github.io/Moon-Phase-Website/starry-night-2.jpg');
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 100vh 100v;
     display: flex;
     /* overflow: hidden; */
     /* overscroll-behavior: hide; */
@@ -53,7 +57,7 @@ body {
 .navbar {
     position: fixed;
     width: 100vw;
-    height: max(100px, 12vh);
+    height: min(120px, 18vh);
     background: hsl(0 0% 100% / 0.05);
     backdrop-filter: blur(1rem);
     display: flex;
@@ -69,9 +73,9 @@ body {
 
 .moonPhaseHolder {
     position: absolute;
-    left:  5%;
+    left:  8%;
     width: fit-content;
-    top: 25%;
+    bottom: 5%;
     height: fit-content;
     /* align-self: flex-end; */
     /* justify-self: left; */
@@ -79,37 +83,48 @@ body {
 
 .moonPhase {
     color: white;
-    font-size: 4em;
+    font-size: min(4em, 16vw);
+    cursor: pointer;
+    user-select: none;
 }
 
 .navLinks {
     position: absolute;
     /* right: 15em; */
-    width: 100%;
+    width: fit-content;
     height: fit-content;
-    top: 50%;
+    right: 10%;
+    bottom: 5%;
     grid-row: 1;
+    column-gap: 10px;
+    text-align: right;
     margin-bottom: 5px;
+    display: grid;
+    gap: 15%;
     /* align-self: flex-end; */
     /* justify-self: right; */
+    justify-content: flex-end;
 }
 
 .headerA {
     color: white;
-    font-size: 2em;
+    font-size: min(2em, 7vw);
     text-decoration: none;
+    grid-row: 1;
+    width: fit-content;
     /* padding: 0px 1.5em; */
-    position: absolute;
+    /* position: absolute; */
+    /* padding-right: 15px; */
     
 }
 
-.home {
+/* .home {
     right: 15%;
 }
 
 .options {
     right: 5%;
-}
+} */
 
 .bodyydob {
     width: 100vw;
@@ -129,14 +144,14 @@ body {
 }
 
 .page2 {
-    font-size: 400px;
+    font-size: 10vw;
     color: white;
 }
 
 .moonWheel {
     position: absolute;
     width: 25px;
-    height: 450px;
+    height: 555px;
     /* background-color: red; */
     display: flex;
     align-items: flex-start;
@@ -156,7 +171,7 @@ body {
 }
 
 .moonStats {
-    width: max(10vw, 100px);
+    width: max(10vw, 135px);
     aspect-ratio: 1;
     background-color: black;
     border-radius: 50%;
@@ -190,6 +205,7 @@ body {
 
 .moonSVG {
     position: relative;
+    top: 10%;
     width: min-content;
     aspect-ratio: 1;
     z-index: 9;
@@ -219,7 +235,7 @@ body {
 }
 
 .moonPhases {
-    width: min(600px, 90vw);
+    width: min(600px, 80vw);
     aspect-ratio: 1;
     border: 15px solid black;
     border-radius: 50%;
@@ -261,4 +277,150 @@ body {
     border-radius: 50%;
     background: gray;
     grid-row: 1;
+}
+
+@media screen and (max-width: 800px) {
+    .navbar {
+        position: fixed;
+        width: 100vw;
+        height: min(120px, 18vh);
+        background: hsl(0 0% 100% / 0.05);
+        backdrop-filter: blur(1rem);
+        display: flex;
+        z-index: 9999;
+        justify-content: center;
+        align-items: center;
+        /* opacity: 80%; */
+        /* border-radius: 0px 0px 1vh 1vh; */
+    }
+    .moonPhaseHolder {
+        position: absolute;
+        left:  5%;
+        width: fit-content;
+        bottom: 5%;
+        height: fit-content;
+        /* align-self: flex-end; */
+        /* justify-self: left; */
+    }
+    .navLinks {
+        position: absolute;
+        /* right: 15em; */
+        width: 100%;
+        height: fit-content;
+        right: 5%;
+        bottom: 5%;
+        grid-row: 1;
+        /* column-gap: 10px; */
+        text-align: right;
+        margin-bottom: 5px;
+        display: grid;
+        gap: 5%;
+        /* align-self: flex-end; */
+        /* justify-self: right; */
+        justify-content: flex-end;
+    }
+    .headerA {
+        color: white;
+        font-size: min(1.5em, 5vw);
+        text-decoration: none;
+        grid-row: 1;
+        width: fit-content;
+        /* padding: 0px 1.5em; */
+        /* position: absolute; */
+        /* padding-right: 15px; */
+        
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .navbar {
+        position: fixed;
+        width: 100vw;
+        height: min(130px, 20vh);
+        background: hsl(0 0% 100% / 0.05);
+        backdrop-filter: blur(1rem);
+        display: flex;
+        z-index: 9999;
+        justify-content: center;
+        align-items: center;
+        /* opacity: 80%; */
+        /* border-radius: 0px 0px 1vh 1vh; */
+    }
+    .moonPhaseHolder {
+        position: absolute;
+        left:  12vw;
+        width: fit-content;
+        top: 8%;
+        height: fit-content;
+        /* align-self: flex-end; */
+        /* justify-self: left; */
+    }
+    .navLinks {
+        position: absolute;
+        /* right: 15em; */
+        width: 100%;
+        height: fit-content;
+        right: 25%;
+        bottom: 5%;
+        grid-row: 1;
+        /* column-gap: 10px; */
+        text-align: right;
+        margin-bottom: 5px;
+        display: grid;
+        gap: 5%;
+        /* align-self: flex-end; */
+        /* justify-self: right; */
+        justify-content: flex-end;
+    }
+    .headerA {
+        color: white;
+        font-size: min(2em, 7vw);
+        text-decoration: none;
+        grid-row: 1;
+        width: fit-content;
+        /* padding: 0px 1.5em; */
+        /* position: absolute; */
+        /* padding-right: 15px; */
+        
+    }
+}
+
+@media screen and (max-width: 300px) {
+    .navbar {
+        position: fixed;
+        width: 100vw;
+        height: min(100px, 20vh);
+        background: hsl(0 0% 100% / 0.05);
+        backdrop-filter: blur(1rem);
+        display: flex;
+        z-index: 9999;
+        /* opacity: 80%; */
+        /* border-radius: 0px 0px 1vh 1vh; */
+    }
+    .moonPhaseHolder {
+        position: absolute;
+        left:  8%;
+        width: fit-content;
+        bottom: 35%;
+        height: fit-content;
+        /* align-self: flex-end; */
+        /* justify-self: left; */
+    }
+    .navLinks {
+        position: absolute;
+        /* right: 15em; */
+        width: 100%;
+        height: fit-content;
+        /* right: 10%; */
+        right: 25%;
+        bottom: 5%;
+        grid-row: 1;
+        column-gap: 10px;
+        text-align: center;
+        /* margin-bottom: 5px; */
+        display: grid;
+        gap: 5%;
+        /* align-self: flex-end; */
+        /* justify-self: right; */
+    }
 }
