--- a/css/main.css
+++ b/css/main.css
@@ -144,8 +144,7 @@ body {
 }
 
 .page2 {
-    font-size: 10vw;
-    color: white;
+    flex-direction: column;
 }
 
 .moonWheel {
@@ -278,6 +277,26 @@ body {
     background: gray;
     grid-row: 1;
 }
+
+.merchHeader {
+    /* position: relative; */
+    font-size: 8vw;
+    color: white;
+    /* width: 100%; */
+    /* flex-direction: column; */
+    /* bottom: 10%; */
+    margin-bottom: 50px;
+}
+
+.comingSoon {
+    font-size: 2.5vw;
+    color: white;
+    flex-wrap: wrap;
+}
+
+
+
+
 
 @media screen and (max-width: 800px) {
     .navbar {
