Added logo and animated cat in spaceship, created function for calculating the lunar clock

--- a/css/main.css
+++ b/css/main.css
@@ -54,6 +54,50 @@ body {
     font-family: 'Share Tech Mono', monospace;
 }
 
+.wonkeySVG {
+    position: absolute;
+    z-index: -500;
+    width: 100px;
+    aspect-ratio: 1;
+    animation: wonkeySVG 800s infinite;
+    overflow: hidden;
+}
+
+@keyframes wonkeySVG {
+    0% {
+        top: 100vh;
+        left: 0;
+    }
+    16.5% {
+        top: 25vh;
+        left: 100vw;
+    }
+    30% {
+        top: 0;
+        left: 50vw;
+    }
+    40.5% {
+        top: 25vh;
+        left: 0;
+    }
+    55% {
+        top: 100vh;
+        left: 65vw;
+    }
+    66.5% {
+        top: 50vh;
+        left: 100vw;
+    }
+    85% {
+        top: 0;
+        left: 25vw;
+    }
+    100% {
+        top: 100%;
+        left: 0;
+    }
+}
+
 .navbar {
     position: fixed;
     width: 100vw;
@@ -71,12 +115,23 @@ body {
     display: flex;
 }
 
+.mainLogo {
+    width: 65px;
+    aspect-ratio: 1;
+    /* position: absolute; */
+    top: 5%;
+    left: 1%;
+    border-radius: 50%;
+    margin-right: 15px;
+}
+
 .moonPhaseHolder {
     position: absolute;
     left:  8%;
     width: fit-content;
     bottom: 5%;
     height: fit-content;
+    display: flex;
     /* align-self: flex-end; */
     /* justify-self: left; */
 }
@@ -155,7 +210,8 @@ body {
     display: flex;
     align-items: flex-start;
     justify-content: center;
-    transform: rotate(270deg);
+    /* transform: rotate(113.5deg); */
+    transition: transform 1s;
 }
 
 .outerMoon {
@@ -187,6 +243,7 @@ body {
     line-height: 1;
     user-select: none;
     transition: width 500ms ease-in-out;
+    z-index: 2;
     /* animation-delay: 2.4s; */
 }
 
@@ -243,7 +300,6 @@ body {
     box-shadow: 0px 0px 50px 10px ;
     animation: moonphases 2.5s;
     transition: padding 500ms ease-in-out, box-shadow 500ms ease-in-out;
-    
     /* z-index: 3; */
 }
 
@@ -259,7 +315,7 @@ body {
     0% {transform:rotate(0deg);
     width: 0px;
     border: none;}
-    80% {transform:rotate(325deg);
+    80% {transform:rotate(360deg);
     border: none;}
     100% {transform:rotate(0deg);}
 }
