--- a/css/main.css
+++ b/css/main.css
@@ -481,7 +481,7 @@ a:hover, a:active {
     }
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 1000px) {
     .moonPhase {
         color: white;
         font-size: 3em;
@@ -526,6 +526,7 @@ a:hover, a:active {
     .mainNavLi {
         display: block;
         line-height: 100px;
+        transition: all 500ms ease;
     }
     .headerA {
         font-size: 2em;
@@ -537,13 +538,17 @@ a:hover, a:active {
     #check:checked ~ ul {
         left: 0;
     }
-    body[aria-expanded="false"] .optionMenu {
-        top: 420px;
+    /* body[aria-expanded="false"] .optionMenu {
+        top: 120px;
     }
+    body[aria-expanded="true"] .optionMenu {
+        top: 420px;
+    } */
     .optionMenu[aria-expanded="true"] {
         position: fixed;
         /* left: 32.5%; */
         /* display: inline-block; */
+        top: 420px;
         align-items: center;
         justify-content: center;
         right: 0;
@@ -612,6 +617,52 @@ a:hover, a:active {
     }
 }
 
-@media screen and (max-width: 300px) {
-    
+@media screen and (max-height: 480px) {
+    .navLinks {
+        position: fixed;
+        width: 100%;
+        height: 200%;
+        background: hsl(0 0% 0% / .85);
+        backdrop-filter: blur(1rem);
+        top: 120px;
+        left: -100%;
+        text-align: center;
+        transition: all 500ms;
+    }
+    .mainNavLi {
+        display: block;
+        line-height: 50px;
+    }
+    /* body[aria-expanded="false"] .optionMenu {
+        top: 120px;
+    }
+    body[aria-expanded="true"] .optionMenu {
+        top: 300px;
+    } */
+    .optionMenu {
+        position: fixed;
+        /* float: center; */
+        width: 100%;
+        height: fit-content;
+        /* flex-wrap: wrap; */
+        
+        top: 300px;
+        right: -100%;
+        /* display: inline-block; */
+        padding: 5px 0px 5px 0px;
+        text-align: center;
+        background: hsl(0 0% 0% / .5);
+        backdrop-filter: none;
+        transition: all 500ms ease;
+        z-index: 9999;
+    }
+    .optionMenu[aria-expanded="true"] {
+        position: fixed;
+        /* left: 32.5%; */
+        /* display: inline-block; */
+        top: 300px;
+        align-items: center;
+        justify-content: center;
+        right: 0;
+    }
 }
