--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,16 @@
     scroll-behavior: smooth;
 }
 
+button, input[type="submit"], input[type="reset"] {
+	background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+}
+
 ::-webkit-scrollbar {
     width: 1em;
     height: 1rem;
@@ -251,6 +261,11 @@ a:hover, a:active {
     margin-right: 20%;
 }
 
+.optionLi a {
+    cursor: pointer;
+    user-select: none;
+}
+
 .discIcon {
     background-image: url("https://ncooper00.github.io/Moon-Phase-Website/icons/discord.png");
 }
@@ -263,7 +278,11 @@ a:hover, a:active {
     background-image: url("https://ncooper00.github.io/Moon-Phase-Website/icons/email.png");
 }
 
-.discIcon, .gitIcon, .contIcon {
+.musicIcon {
+    background-image: url("/icons/headset-grey.png");
+}
+
+.discIcon, .gitIcon, .contIcon, .musicIcon {
     cursor: pointer;
     margin-top: 12px;
     position: fixed;
@@ -280,6 +299,59 @@ a:hover, a:active {
 .optionBtn {
     color: rgb(214, 214, 214);
     font-size: 1.1em;
+}
+
+.musicBox {
+    position: fixed;
+    bottom: -100%;
+    left: 50%;
+    margin-left: -15%;
+    width: 30%;
+    height: 85px;
+    background: hsl(0 0% 100% / 0.05);
+    backdrop-filter: blur(1rem);
+    transition: bottom 500ms;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.musicBox[aria-expanded="true"] {
+    position: fixed;
+    bottom: 0;
+    left: 50%;
+    margin-left: -15%;
+    width: 30%;
+    height: 85px;
+    background: hsl(0 0% 100% / 0.05);
+    backdrop-filter: blur(1rem);
+}
+
+.previous {
+    background-image: url("/icons/previous.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 25px;
+    aspect-ratio: 1;
+    margin-right: 15px;
+}
+
+.playBtn {
+    background-image: url("/icons/play-btn.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 35px;
+    aspect-ratio: 1;
+
+}
+
+.next {
+    background-image: url("/icons/next.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 25px;
+    aspect-ratio: 1;
+    margin-left: 15px;
 }
 
 .bodyydob {
@@ -508,7 +580,7 @@ a:hover, a:active {
 }
 
 @media screen and (max-width: 1000px) {
-    .discIcon, .gitIcon, .contIcon {
+    .discIcon, .gitIcon, .contIcon, .musicIcon {
         display: none;
     }
     .moonPhase {
