--- a/css/main.css
+++ b/css/main.css
@@ -518,6 +518,26 @@ a:hover, a:active {
     transition: transform 1s;
 }
 
+.innerWheel {
+    /* background-color: blue; */
+    position: absolute;
+    border-radius: 100vh;
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    width: 25px;
+    height: 100%;
+}
+
+.indicator {
+    flex: none;
+    width: 25px;
+    aspect-ratio: 1;
+    /* background-color: white; */
+    box-shadow: 0px -10px 3px rgb(156, 156, 156);
+    border-radius: 50%;
+}
+
 .outerMoon {
     flex: none;
     width: 50px;
