--- a/css/main.css
+++ b/css/main.css
@@ -68,7 +68,7 @@ body {
     position: absolute;
     z-index: -50;
     width: 100px;
-    background-image: url('/svg/wonkey.svg');
+    background-image: url('https://ncooper00.github.io/Moon-Phase-Website/svg/wonkey.svg');
     aspect-ratio: 1;
     background-size: cover;
     background-repeat: no-repeat;
